[package]
name = "realm-rust-bundle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
realm-sys = { path = "../sys" }
realm-core = { path = "../core" }
realm-query = { path = "../query" }
