add_library(pthread_win32 STATIC pthread.c)

set_property(TARGET pthread_win32 APPEND PROPERTY COMPILE_DEFINITIONS PTW32_STATIC_LIB)

target_include_directories(pthread_win32 INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})

install(TARGETS pthread_win32 ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT devel)
install(DIRECTORY ${CMAKE_SOURCE_DIR} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} FILES_MATCHING PATTERN "*.h" COMPONENT devel)
